# Refurboard

./: .gitignore  README.md  Refurboard.sln  azuredeploy.json  build_executable.sh  main.py  pyproject.toml  refurboard.spec  server.crt  server.key  settings.gradle.kts  setup.py
.github/workflows/: arm-template-lint.yml  azure-static-web-apps-ashy-pebble-0a0fa1710.yml  azure-static-web-apps-purple-rock-06db10710.yml  pyinstaller.yml  test.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
assets/: logo.icns
client/: app.js  index.html  manifest.json
gradle/wrapper/: gradle-wrapper.properties
refurboard/: __init__.py
refurboard-wiki/: mkdocs.yml
refurboard-wiki/docs/: building_executables.md  index.md  setup.md  technical.md
refurboard-wiki/site/: index.html
refurboard-wiki/site/building_executables/: index.html
refurboard-wiki/site/search/: search_index.json
refurboard-wiki/site/setup/: index.html
refurboard-wiki/site/technical/: index.html
refurboard/server/: flask_app.py  ssl_utils.py
refurboard/ui/: calibration.py
refurboard/utils/: mouse_control.py  network.py
refurboard/vision/: led_detector.py
src/Refurboard.App/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Refurboard.App.csproj
src/Refurboard.App/Calibration/: CalibrationOutcome.cs  CalibrationViewModel.cs  CalibrationWindow.axaml  CalibrationWindow.axaml.cs
src/Refurboard.App/Controls/: CalibrationOverlayControl.cs
src/Refurboard.App/Startup/: BootstrapState.cs
src/Refurboard.App/ViewModels/: CameraPreviewViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
src/Refurboard.Core/: Class1.cs  Refurboard.Core.csproj
src/Refurboard.Core/Camera/: CameraTypes.cs  ICameraPipeline.cs  OpenCvCameraPipeline.cs
src/Refurboard.Core/Configuration/: ConfigBootstrapResult.cs  ConfigRepairPlan.cs  ConfigValidationResult.cs  ConfigVersion.cs  ConfigurationBootstrapper.cs  ConfigurationPersistence.cs  ConfigurationSchemaProvider.cs  ConfigurationTemplateFactory.cs  RefurboardConfigValidator.cs  config.schema.json
src/Refurboard.Core/Configuration/Models/: RefurboardConfig.cs
src/Refurboard.Core/Vision/IrTracking/: IrBlobDetector.cs  IrPointerPipeline.cs  IrTrackingModels.cs
src/Refurboard.Core/Vision/SpatialMapping/: HomographyMapping.cs
src/refurboard_py/: __init__.py  __main__.py  app.py  calibration.py  camera.py  config.py  detection.py  pointer.py  ui.py
tests/: test_config.py  test_detection.py  test_led_detector.py  test_mouse_control.py  test_network.py
(+6 files in other folders)
