[tool.poetry]
name = "refurboard"
version = "0.1.0"
description = "Turn any old smart phone into an interactive whiteboard"
authors = ["kloeffler95 <kevin.loeffler@colorado.edu>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
kivy = "^2.3.0"
qrcode = {extras = ["pil"], version = "^8.0"}
pillow = "^11.0.0"
flask = "^3.1.0"
opencv-python = "^4.10.0.84"
pyopenssl = "^24.3.0"


[tool.poetry.group.dev.dependencies]
cx-freeze = "^7.2.8"
mkdocs = "^1.6.1"
mkdocs-landing = "^0.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
