[tool.poetry]
name = "refurboard"
version = "0.1.0"
description = "Turn any old smart phone into an interactive whiteboard"
authors = ["kloeffler95 <kevin.loeffler@colorado.edu>"]
license = "Apache-2.0"
readme = "README.md"
package-mode = false
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
kivy = "^2.3.0"
qrcode = {extras = ["pil"], version = "^8.0"}
pillow = "^11.0.0"
flask = "^3.1.0"
opencv-python = "^4.10.0.84"
pyopenssl = "^24.3.0"
pynput = "^1.7.7"


[tool.poetry.group.dev.dependencies]
cx-freeze = "^7.2.8"
mkdocs = "^1.6.1"
mkdocs-landing = "^0.0.8"
pytest = "^8.3.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
