[tool.poetry]
name = "refurboard"
version = "0.1.0"
description = "IR whiteboard controller with OpenCV, Dear PyGui, and pynput"
authors = ["Refurboard Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "refurboard_py", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = "^1.26"
opencv-python = "^4.9.0"
dearpygui = "^1.11.1"
pynput = "^1.7.7"
platformdirs = "^4.2.0"
Pillow = "^10.2.0"
screeninfo = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
pyinstaller = "^6.3.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
refurboard = "refurboard_py.app:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
